Fix width overflow problem

--- a/public/css/bg-video.css
+++ b/public/css/bg-video.css
@@ -37,7 +37,7 @@
   .video-foreground { height: 300%; top: -100%; }
 }
 @media (max-aspect-ratio: 16/9) {
-  .video-foreground { width: 300%; left: -100%; }
+  .video-foreground { width: 100%; left: 0%; }
 }
 @media all and (max-width: 600px) {
 .vid-info { width: 50%; padding: .5rem; }
